SERVER-59775 Make ReshardingDonorOplogIterator safe to run as secondary.